--- a/react-front/src/components/Modale/Modale.css
+++ b/react-front/src/components/Modale/Modale.css
@@ -15,13 +15,24 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    color: black;
+    text-align: left;
+    max-width: 500px;
+}
+.modale-footer{
+    gap: 0.5rem;
+}
+.modale-footer a, .modale-footer button{
+    cursor: pointer;
+    flex-grow: 1;
+    text-align: center;
 }
 
 .modale-error {
     border-left: 4px solid red;
 }
 
-.modale-infos {
+.modale-info {
     border-left: 4px solid blue;
 }
 
@@ -29,8 +40,8 @@
     border-left: 4px solid orange;
 }
 
-.modale-header h2 {
-    margin: 0;
+.modale-header h3 {
+    margin-bottom: 0;
 }
 
 .modale-body p {
@@ -53,9 +64,45 @@
 }
 
 .modale-close-button {
-    background-color: #6c757d;
-    color: white;
+    border: 2px solid #6c757d;
+    background-color: white;
+    color: black;
     padding: 10px 20px;
-    border: none;
     border-radius: 5px;
+}
+
+.modale-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modale-container.info .modale-icon svg{
+    color: #429BDB;
+}
+.modale-container.info .modale-icon span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(66, 155, 219, 0.1);
+    width: 30px;
+    aspect-ratio: 1/1;
+    border-radius: 1rem;
+    padding: 0.2rem;
+}
+.modale-container.info .modale-action-button{
+    background-color: #429BDB;
+}
+
+.modale-container.warning .modale-icon svg{
+    color: #ff9100;
+}
+.modale-container.warning .modale-action-button{
+    background-color: #ff9100;
+}
+
+.modale-container.error .modale-icon svg{
+    color: red;
+}
+.modale-container.error .modale-action-button{
+    background-color: red;
 }
