[+] update of missing things in noyau

--- a/react-front/src/components/FilDiscussion/FilDiscussion.scss
+++ b/react-front/src/components/FilDiscussion/FilDiscussion.scss
@@ -3,6 +3,11 @@ Author: @mathis-lambert
 Date: Janvier 2024
 */
 
+.discussion {
+  margin: 1rem auto;
+  padding: 1rem;
+}
+
 .fil-discussion-container {
   width: 100%;
   overflow-y: auto;
