--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -14,6 +14,15 @@
   -webkit-text-size-adjust: 100%;
 }
 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -38,6 +47,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+button:hover {
+  border-color: #646cff;
+}
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -47,6 +59,9 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
