--- a/react-front/src/components/Modale/Modale.css
+++ b/react-front/src/components/Modale/Modale.css
@@ -18,6 +18,8 @@
     color: black;
     text-align: left;
     max-width: 500px;
+    min-width: 250px;
+    position: relative;
 }
 .modale-footer{
     gap: 0.5rem;
@@ -64,6 +66,17 @@
 }
 
 .modale-close-button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: white;
+    color: black;
+    padding: .3rem .1rem .1rem .1rem;
+    border-radius: 5px;
+    margin: 1rem;
+}
+
+.modale-cancel-button {
     border: 2px solid #6c757d;
     background-color: white;
     color: black;
