--- a/react-front/src/components/FilDiscussion/FilDiscussion.scss
+++ b/react-front/src/components/FilDiscussion/FilDiscussion.scss
@@ -4,40 +4,52 @@ Date: Janvier 2024
 */
 
 .discussion {
-  margin: 1rem auto;
   padding: 1rem;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow: hidden;
 }
 
 .fil-discussion-container {
   width: 100%;
-  overflow-y: auto;
   margin: 1rem auto;
-  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 1rem;
+  overflow: hidden;
+  border-radius: 0.5rem;
 
-  &::-webkit-scrollbar {
-    width: 0.5rem;
-  }
+  &--scroll {
+    overflow-y: auto;
 
-  &::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
+    &::-webkit-scrollbar {
+      width: 0.5rem;
+    }
 
-  &::-webkit-scrollbar-thumb {
-    background: #888;
-  }
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
 
-  &::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+    &::-webkit-scrollbar-thumb {
+      background: #888;
+    }
 
-  .fil-discussion {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 0.5rem;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0.5rem 0;
+    &::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
+
+    .fil-discussion {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 0.5rem;
+      width: 100%;
+      margin: 0 auto;
+      padding: 0.5rem 0;
+    }
   }
 }
