--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -14,6 +14,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
