[+] Add Profile viewer using object as DB

--- a/react-front/src/index.css
+++ b/react-front/src/index.css
@@ -59,3 +59,15 @@
 .jc-sa {
     justify-content: space-around;
 }
+
+.o0-5{
+    opacity: 0.5;
+}
+
+.ta-c{
+    text-align: center;
+}
+
+.ta-l{
+    text-align: left;
+}
