--- a/react-front/src/components/ProfilOverlay/ProfilOverlay.css
+++ b/react-front/src/components/ProfilOverlay/ProfilOverlay.css
@@ -31,20 +31,16 @@
 .onglets-overlay {
     display: flex;
     flex-direction: column;
+    margin: 10px;
 }
 
 .onglets-overlay a {
-    display: block;
     margin-bottom: 10px;
     color: black;
     text-decoration: none;
     font-size: 18px;
 }
 
-.feather.feather-settings.settings, .feather.feather-log-out.log-out {
-    margin-bottom: -4px;
-    margin-right: 5px;
-}
 
 .info-container
 {
@@ -74,22 +70,18 @@
 }
 .statut-indicateur.deconnecte
 {
-  border-radius: 50%;
-  border: 10px solid red;
-  width: 1px;
-  top: 65px;
-  position: relative;
-  left: 30px;
+    border-radius: 50rem;
+    background-color: red;
+    width: 20px;
+    height: 20px;
 }
 
 .statut-connexion.connecte
 {
-  border-radius: 50%;
-  border: 8px solid green;
-  width: 1px;
-  top: 23px;
-  position: relative;
-  left: 50px;
+  border-radius: 50rem;
+  background-color: green;
+  width: 20px;
+  height: 20px;
 }
 .statut-connexion.deconnecte
 {
