--- a/react-front/src/components/Accueil/NoyauAccueil.css
+++ b/react-front/src/components/Accueil/NoyauAccueil.css
@@ -1,13 +1,16 @@
 .container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .section {
-    background-color: #ffffff;
-    border-radius: 10px;
-    padding: 20px;
-    margin-right: 20px;
-    color: black;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+}
+
+.section {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 20px;
+  margin-right: 20px;
+  color: black;
+}
+
+ul {
+  list-style: none;
+}
