--- a/react-front/src/components/ChatInput/ChatInput.scss
+++ b/react-front/src/components/ChatInput/ChatInput.scss
@@ -3,7 +3,7 @@ Author: @mathis-lambert
 Date: Janvier 2024
 */
 
-form {
+.chat-form {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,7 +11,7 @@ form {
   width: 100%;
   height: 50px;
 
-  input {
+  .chat-input {
     width: 100%;
     height: 100%;
     padding: 0 20px;
@@ -27,7 +27,7 @@ form {
       line-height: 1;
     }
   }
-  button {
+  .chat-send {
     width: fit-content;
     height: 100%;
     border: none;
