--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -24,11 +24,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #1C376A;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #1C376A;
 }
 
 body {
@@ -55,9 +55,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -69,7 +67,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #1C376A;
   }
   button {
     background-color: #f9f9f9;
