--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -39,7 +39,9 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+h2, p {
+  color: black;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
