--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -39,7 +39,10 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-h2, p {
+h2 {
+  color: rgb(34, 58, 106);;
+}
+p {
   color: black;
 }
 button {
