--- a/react-front/src/elements/Accueil/NoyauAccueil.css
+++ b/react-front/src/elements/Accueil/NoyauAccueil.css
@@ -1,17 +1,31 @@
 .container {
-  display: flex;
-  justify-content: space-between;
+  height: auto;
 }
 
-.section {
+.section-profil, .section-notification, .section-historique {
   background-color: #ffffff;
   border-radius: 10px;
-  padding: 20px;
-  margin-right: 20px;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.31) 0px 1px 4px;
+  height: 125px;
+}
+.section{
+  padding: 20px;
+  margin-top: 20px;
+  height:auto;
+}
+.section-header{
+  margin: 10px;
 }
 
 ul {
   list-style: none;
+}
+
+.logo-profil-info{
+  width: 80px;
+  border-radius: 50%;
+}
+.profil-info, .notification-affiche, .notification-info{
+  height: 100%;
 }
