[+] create discussion, choose user, receive messages

--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -35,8 +35,15 @@ body {
   min-height: 100vh;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+  line-height: 1.1;
+  color: #191919;
+  font-weight: bold;
+}
+
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
 }
 h2 {
