--- a/react-front/src/elements/Accueil/NoyauAccueil.css
+++ b/react-front/src/elements/Accueil/NoyauAccueil.css
@@ -2,7 +2,7 @@
   height: auto;
 }
 
-.section-profil, .section-notification, .section-historique {
+.section-profil, .section-notification, .section-notification-hidden, .section-historique {
   background-color: #ffffff;
   border-radius: 10px;
   color: black;
@@ -17,7 +17,9 @@
 .section-header{
   margin: 10px;
 }
-
+.section-notification{
+  margin-bottom: 2rem;
+}
 ul {
   list-style: none;
 }
@@ -28,4 +30,22 @@ ul {
 }
 .profil-info, .notification-affiche, .notification-info{
   height: 100%;
+}
+.icon-button{
+  margin: auto;
+  border-radius: 50%;
+  background-color: #234457;
+  height: 30px;
+  width: 30px;
+}
+.icon-button2{
+  margin: auto;
+  border-radius: 50%;
+  background-color: #429BDB;
+  height: 30px;
+  width: 30px;
+}
+.feather-edit-2, .feather-bell{
+  fill: white;
+  stroke: white;
 }
