--- a/react-front/src/elements/ProfilOverlay/ProfilOverlay.scss
+++ b/react-front/src/elements/ProfilOverlay/ProfilOverlay.scss
@@ -16,6 +16,7 @@
   border-radius: 5px;
   padding: 5px;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.31) 0px 1px 4px;
 }
 
 .overlay-logo {
