--- a/react-front/src/elements/Toasts/toasts.scss
+++ b/react-front/src/elements/Toasts/toasts.scss
@@ -22,7 +22,7 @@ Date: Janvier 2024
     margin-bottom: 10px;
     padding: 0.75rem 1rem;
     width: 100%;
-    color: #fff;
+    color: var(--color-font);
     background-color: #323232;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
