--- a/react-front/src/components/Discussion/liste-discussions/ListeDiscussions.scss
+++ b/react-front/src/components/Discussion/liste-discussions/ListeDiscussions.scss
@@ -10,7 +10,7 @@
     height: 100%;
     padding: 0.5rem;
     border-radius: 0.75rem;
-    background-color: #234457;
+    background-color: var(--color-primary);
     height: 100%;
 
     display: flex;
@@ -18,7 +18,7 @@
     gap: 1rem;
 
     h2 {
-      color: #fff;
+      color: var(--color-font);
       font-size: 1.5rem;
       margin-bottom: 1rem;
     }
@@ -48,9 +48,10 @@
 
   &--item {
     display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.25rem;
+    padding: 0.7rem;
     border-radius: 0.5rem;
     background-color: #182329;
     cursor: pointer;
@@ -58,6 +59,20 @@
 
     &:hover {
       background-color: #f5f5f5;
+    }
+
+  }
+
+  &--last-message {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    font-weight: lighter;
+    font-size: 0.65rem;
+
+    span {
+      color: var(--color-font);
+
     }
   }
 }
