--- a/react-front/src/components/NoyauInscription/NoyauInscription.css
+++ b/react-front/src/components/NoyauInscription/NoyauInscription.css
@@ -90,7 +90,7 @@ input {
 
 .button-inscription {
     background-color: #1C376A;
-    color: #fff;
+    color: var(--color-font);
     padding: 0.3rem 6.5rem;
     border: 1px solid #1c376a;
     border-radius: 5px;
