--- a/react-front/src/elements/AdminListeUtilisateurs/AdminListeUtilisateurs.scss
+++ b/react-front/src/elements/AdminListeUtilisateurs/AdminListeUtilisateurs.scss
@@ -7,11 +7,11 @@
   &--card {
     padding: 1rem;
     border-radius: 0.75rem;
-    background-color: #234457;
+    background-color: var(--color-primary);
     margin-bottom: 1rem;
 
     h2 {
-      color: #fff;
+      color: var(--color-font);
       font-size: 1.5rem;
     }
   }
@@ -31,13 +31,13 @@
       border: 1px solid #aaa;
       padding: 8px;
       text-align: left;
-      color: #fff;
+      color: var(--color-font);
       vertical-align: top;
     }
 
     th {
-      background-color: #234457;
-      color: #fff;
+      background-color: var(--color-primary);
+      color: var(--color-font);
     }
 
     tr:nth-child(even) {
@@ -62,7 +62,7 @@
     padding: 0.5rem;
     border-radius: 0.5rem;
     cursor: pointer;
-    color: #fff;
+    color: var(--color-font);
     margin-right: 0.5rem;
   }
 
