--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -16,7 +16,7 @@
 
   --color-primary: #234457;
   --color-primary-light: #2f5f8f;
-  --color-primary-dark: #1a3a5f;
+  --color-primary-dark: #182329;
   --color-light: #eee;
   --color-lighter: #f9f9f9;
   --color-dark: #1a1a1a;
