--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -21,6 +21,7 @@
   --color-lighter: #f9f9f9;
   --color-dark: #1a1a1a;
   --color-dark-light: #4A4A4A;
+  --color-dark-lighter: #6A6A6A;
   --color-dark-dark: #000;
   --color-font: rgba(255, 255, 255, 0.87);
   --color-font-secondary: rgba(255, 255, 255, 0.6);
@@ -117,9 +118,12 @@ button, .btn {
 .btn-secondary {
   background-color: var(--color-light);
   color: var(--color-font-dark);
+  border: 1px solid var(--color-dark);
 
   &:hover {
-    background-color: var(--color-lighter);
+    background-color: var(--color-dark-lighter);
+    color: var(--color-font);
+    border: 1px solid var(--color-dark-light);
   }
 }
 
