[+] new update on webrtc feature

--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -23,7 +23,8 @@
   --color-dark-light: #4A4A4A;
   --color-dark-lighter: #6A6A6A;
   --color-dark-dark: #000;
-  --color-font: rgba(255, 255, 255, 0.87);
+  --color-font: rgba(255, 255, 255, 0.9);
+  --color-font-light: rgba(255, 255, 255, 1);
   --color-font-secondary: rgba(255, 255, 255, 0.6);
   --color-font-dark: rgba(0, 0, 0, 0.87);
   --color-error: #f44336;
