--- a/react-front/src/elements/Layout/Layout.scss
+++ b/react-front/src/elements/Layout/Layout.scss
@@ -7,7 +7,7 @@
 
   & .layout-grid {
     display: grid;
-    grid-template-columns: 80px 1fr;
+    grid-template-columns: var(--sidebar-width) 1fr;
   }
 }
 
