--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -37,6 +37,9 @@
   --color-info-light: #64b5f6;
   --color-disabled: #9e9e9e;
   --color-disabled-light: #bdbdbd;
+    --color-disabled-dark: #757575;
+  
+  --sidebar-width: 60px;
 }
 
 *,
