[+] WebRTC is working, you can make call between 2 people (tested) -> more has not been tested yet

--- a/react-front/src/components/Discussion/liste-discussions/ListeDiscussions.scss
+++ b/react-front/src/components/Discussion/liste-discussions/ListeDiscussions.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100dvh;
-  padding: 0.5rem;
+  padding: 0.75rem 0 0.75rem 0.75rem;
   overflow: hidden;
   grid-area: list-discussion;
 
