--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -18,6 +18,7 @@
   --color-primary-light: #2f5f8f;
   --color-primary-dark: #182329;
   --color-light: #eee;
+  --color-light-transparent: rgba(238, 238, 238, 0.8);
   --color-lighter: #f9f9f9;
   --color-dark: #1a1a1a;
   --color-dark-light: #4A4A4A;
