--- a/react-front/src/components/Discussion/DiscussionComponent.scss
+++ b/react-front/src/components/Discussion/DiscussionComponent.scss
@@ -4,6 +4,7 @@
 }
 
 .discussion-context {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr;
@@ -11,13 +12,15 @@
   grid-template-areas: "list-discussion discussion-content";
 
   .discussion-content {
-    padding: 1rem;
+    padding: 0.75rem;
     height: 100dvh;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     overflow: hidden;
     grid-area: discussion-content;
+  position: relative;
+
 
     &.no-discussion {
       justify-content: center;
