--- a/react-front/src/components/Discussion/fil-discussion/FilDiscussion.scss
+++ b/react-front/src/components/Discussion/fil-discussion/FilDiscussion.scss
@@ -5,16 +5,30 @@ Date: Janvier 2024
 
 .fil-discussion-container {
   width: 100%;
-  margin: 1rem auto;
   display: flex;
   flex-direction: column;
   height: 100%;
   gap: 1rem;
   overflow: hidden;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
+  position: relative;
+
+  &.shadow {
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+      height: 5rem;
+      z-index: 1;
+    }
+  }
+
 
   &--scroll {
     overflow-y: auto;
+
 
     &::-webkit-scrollbar {
       width: 0.5rem;
