--- a/react-front/src/components/Discussion/header-fil-de-discussion/HeaderFilDiscussion.scss
+++ b/react-front/src/components/Discussion/header-fil-de-discussion/HeaderFilDiscussion.scss
@@ -1,6 +1,13 @@
 .header-fil-discussion {
+  position: absolute;
+  left: 0.75rem;
+  right: 0.75rem;
+  z-index: 5;
+
   padding: 1rem;
-  background-color: var(--color-light);
+  background-color: var(--color-light-transparent);
+  backdrop-filter: blur(3px);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
   display: flex;
   flex-direction: row;
