--- a/react-front/src/components/Accueil/NoyauAccueil.css
+++ b/react-front/src/components/Accueil/NoyauAccueil.css
@@ -32,7 +32,32 @@ ul {
     width: 80px;
     border-radius: 50%;
 }
+.logo-profil-reception {
+    width: 3rem;
+    border-radius: 50%;
+}
+.notification-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    border-bottom: 1px black dotted;
+}
 
+.notification-item img.logo-profil-reception {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.notification-item p {
+    margin: 0;
+}
+
+.sender-name {
+    font-weight: bold;
+    margin-right: 5px;
+}
 .profil-info, .notification-affiche, .notification-info, .historique-info, .historique-affiche {
     height: 100%;
 }
@@ -66,6 +91,8 @@ ul {
 }
 .notifications, .historiques {
     padding: 1em;
+    max-height: 70vh;
+    overflow: scroll;
 }
 ul{
     width: 100%;
