--- a/react-front/src/elements/NoyauBarreDeMenu/NoyauBarreDeMenu.css
+++ b/react-front/src/elements/NoyauBarreDeMenu/NoyauBarreDeMenu.css
@@ -83,3 +83,20 @@ a {
     user-select: none;
     pointer-events: none;
 }
+
+ .section-status-hidden {
+    background-color: #ffffff;
+    border-radius: 10px;
+    color: black;
+    box-shadow: rgba(0, 0, 0, 0.31) 0px 1px 4px;
+    min-height: 125px;
+}
+.status-info{
+    margin: auto;
+    height: 100%;
+}
+.status {
+    padding: 1em;
+    max-height: 70vh;
+    overflow: scroll;
+}
