--- a/react-front/src/elements/AdminAjouterUtilisateur/AdminAjouterUtilisateur.scss
+++ b/react-front/src/elements/AdminAjouterUtilisateur/AdminAjouterUtilisateur.scss
@@ -6,7 +6,6 @@
 
   &--tools{
     display: flex;
-    margin-bottom: 1rem;
     gap: 1rem;
     width: 100%;
   }
@@ -35,7 +34,6 @@
   }
   &--tools {
     display: flex;
-    margin-bottom: 1rem;
     gap: 1rem;
     width: 100%;
 
@@ -136,6 +134,59 @@
     &--supp {
       background-color: #f00;
     }
+  }
+
+}
+
+.ajouter-utilisateur-label{
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  font-size: 1rem;
+  color: var(--color-primary);
+
+
+  input, textarea {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: #EAEAEA;
+  }
+  textarea{
+    resize: vertical;
+    min-height: 100px;
+    max-height: 300px;
+    width: 100%;
+  }
+}
+
+
+.ajouter-utilisateur-form{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+
+  button[type="submit"] {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+    text-wrap: nowrap;
+    padding: 0.6rem 1rem;
+    border-radius: 5rem;
+    background-color: var(--color-primary);
+    font-size: 0.8rem;
+    margin-left:auto;
+  }
+
+  h4,span {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+  }
+  p{
+    color: red;
   }
 
 }
