--- a/react-front/src/elements/AdminAjouterUtilisateur/AdminAjouterUtilisateur.scss
+++ b/react-front/src/elements/AdminAjouterUtilisateur/AdminAjouterUtilisateur.scss
@@ -151,6 +151,7 @@
     border: none;
     border-radius: 0.5rem;
     background-color: #EAEAEA;
+    color: #4A4A4A;
   }
   textarea{
     resize: vertical;
