Mise en place du changement d'état utilisateur
Ajout des fonctions de changement de status

--- a/react-front/src/elements/NoyauBarreDeMenu/NoyauBarreDeMenu.css
+++ b/react-front/src/elements/NoyauBarreDeMenu/NoyauBarreDeMenu.css
@@ -94,7 +94,9 @@ a {
     margin-left: 100%;
     margin-top: 6rem;
 }
-
+.section-status-hidden li:hover{
+    background-color: #f0f0f0;
+}
 .status-info {
     margin: auto;
     height: 100%;
