--- a/react-front/src/elements/AdminAjouterUtilisateur/AdminAjouterUtilisateur.scss
+++ b/react-front/src/elements/AdminAjouterUtilisateur/AdminAjouterUtilisateur.scss
@@ -153,6 +153,11 @@
     background-color: #EAEAEA;
     color: #4A4A4A;
   }
+
+  input[type="checkbox"]{
+    width: 1rem;
+    height: 1rem;
+  }
   textarea{
     resize: vertical;
     min-height: 100px;
