--- a/react-front/src/elements/NoyauBarreDeMenu/NoyauBarreDeMenu.css
+++ b/react-front/src/elements/NoyauBarreDeMenu/NoyauBarreDeMenu.css
@@ -66,7 +66,7 @@ a {
     position: relative;
     width: 100%;
     aspect-ratio: 1/1;
-    background: var(--color-light)eeeaa;
+    background: var(--color-light) eeeaa;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -84,17 +84,24 @@ a {
     pointer-events: none;
 }
 
- .section-status-hidden {
+.section-status-hidden {
     background-color: #ffffff;
     border-radius: 10px;
     color: black;
     box-shadow: rgba(0, 0, 0, 0.31) 0px 1px 4px;
     min-height: 125px;
+    position: absolute;
+    margin-left: 100%;
+    margin-top: 6rem;
 }
-.status-info{
+.section-status-hidden li:hover{
+    background-color: #f0f0f0;
+}
+.status-info {
     margin: auto;
     height: 100%;
 }
+
 .status {
     padding: 1em;
     max-height: 70vh;
