fix CSS animation that render badly

--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -248,7 +248,7 @@ img {
   border: 1px solid lightgray;
   border-radius: 0.5rem;
 }
-.collapse section{
+.collapse section div.collapse-content{
   padding: 1rem;
 }
 .expand-button{
