--- a/react-front/src/elements/NoyauAnnuaire/NoyauAnnuaire.scss
+++ b/react-front/src/elements/NoyauAnnuaire/NoyauAnnuaire.scss
@@ -86,12 +86,24 @@
       color:#949494;
       font-size: 1rem;
     }
+    .info{
+      position: absolute;
+      top: 0.5rem;
+      right: 0.5rem;
+      color: #949494;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .info:hover{
+      background-color: #EAEAEA;
+    }
   }
 
   &--actions{
     display: flex;
     gap: 0.5rem;
     justify-content: space-between;
+    align-items: center;
 
     button {
       display: flex;
@@ -108,4 +120,28 @@
 
   }
 
+}
+
+.profile-modale{
+  &--bar{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    padding-bottom: 0.8rem;
+    border-bottom: 1px solid #d5d5d5;
+
+    img{
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+    }
+  }
+
+  .info{
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+
+
+  }
 }
