--- a/react-front/src/elements/AdminListeRoles/AdminListeRoles.scss
+++ b/react-front/src/elements/AdminListeRoles/AdminListeRoles.scss
@@ -15,6 +15,40 @@
       font-size: 1.5rem;
     }
   }
+  &--tools {
+    display: flex;
+    margin-bottom: 1rem;
+    gap: 1rem;
+    width: 100%;
+
+    &--search{
+      display: flex;
+      align-items: center;
+      background-color: #EAEAEA;
+      border-radius: 0.5rem;
+      width: 100%;
+      overflow: hidden;
+
+      svg{
+        margin-left: 0.5rem;
+        color: #4A4A4A;
+      }
+      input {
+        padding: 0.5rem;
+        border: none;
+        background-color: #EAEAEA;
+        border-radius: 0;
+      }
+    }
+
+    &--button {
+      text-wrap: nowrap;
+      padding: 0.6rem 1rem;
+      border-radius: 5rem;
+      background-color: var(--color-primary);
+      font-size: 0.8rem;
+    }
+  }
 
   &--container {
     overflow-x: auto;
@@ -25,23 +59,27 @@
     border-collapse: collapse;
     border-radius: 10px;
     overflow: hidden;
+    color:black;
 
+    tr{
+      padding: 0.5rem;
+    }
     th,
     td {
-      border: 1px solid #aaa;
       padding: 8px;
       text-align: left;
-      color: var(--color-font);
       vertical-align: top;
+      border-radius: 10px;
+
     }
 
     th {
-      background-color: var(--color-primary);
-      color: var(--color-font);
+      background-color: #EAEAEA;
+      color: var(--color-primary);
     }
 
     tr:nth-child(even) {
-      background-color: var(--color-dark);
+      background-color: #EAEAEA;
     }
 
     td:last-child {
@@ -56,21 +94,33 @@
       border-top-right-radius: 10px;
     }
   }
+  &--actions{
+    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
 
-  &--modif,
-  &--supp {
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    color: var(--color-font);
-    margin-right: 0.5rem;
+    &--modif,
+    &--supp, &--voir {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.3rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      color: var(--color-font);
+      margin-right: 0.5rem;
+    }
+
+    &--voir {
+      background-color: var(--color-primary)
+    }
+    &--modif {
+      background-color: var(--color-primary)
+    }
+
+    &--supp {
+      background-color: #f00;
+    }
   }
 
-  &--modif {
-    background-color: #00f;
-  }
-
-  &--supp {
-    background-color: #f00;
-  }
 }
