--- a/react-front/src/elements/AdminVoirRole/AdminVoirRole.scss
+++ b/react-front/src/elements/AdminVoirRole/AdminVoirRole.scss
@@ -1,4 +1,4 @@
-.voir-utilisateur {
+.voir-role {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -43,7 +43,7 @@
 
 }
 
-.voir-utilisateur--content--card--content {
+.voir-role--content--card--content {
   color:black;
 
   &--row {
