--- a/react-front/src/components/Accueil/NoyauAccueil.css
+++ b/react-front/src/components/Accueil/NoyauAccueil.css
@@ -69,7 +69,7 @@ ul {
 .icon-button {
     margin: auto;
     border-radius: 50%;
-    background-color: var(--color-primary);
+    background-color: var(--color-primary) !important;
     height: 30px;
     width: 30px;
 }
@@ -91,7 +91,7 @@ ul {
 }
 .notifications, .historiques {
     padding: 1em;
-    max-height: 70vh;
+    max-height: 50vh;
     overflow: scroll;
 }
 ul{
