--- a/react-front/src/components/Discussion/fil-discussion/FilDiscussion.scss
+++ b/react-front/src/components/Discussion/fil-discussion/FilDiscussion.scss
@@ -6,7 +6,7 @@ Date: Janvier 2024
 .fil-discussion-container {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   height: 100%;
   gap: 1rem;
   overflow: hidden;
