Notification update improve
Oublie de changement dans messageToUpdate ce qui causait une erreur server.

Changement des scrolls, maintenant c'est juste sur Y

--- a/react-front/src/components/Accueil/NoyauAccueil.css
+++ b/react-front/src/components/Accueil/NoyauAccueil.css
@@ -97,7 +97,7 @@ ul {
 .notifications, .historiques {
     padding: 1em;
     max-height: 50vh;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 ul {
