[+] Able to come back in a call after switching page.

--- a/react-front/src/components/Discussion/call/Call.scss
+++ b/react-front/src/components/Discussion/call/Call.scss
@@ -11,6 +11,10 @@
     height: 100%;
     object-fit: contain;
     aspect-ratio: 16/9;
+
+    &.hidden {
+      display: none;
+    }
   }
 
   #local-video {
