[+] new call widget (able to keep control on running call wherever you are), the widget is draggable wherever u want, and now CallInfo returns not only the discussion_uuid in "discussion" but all the discussion.info object

--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -36,6 +36,7 @@
   --color-warning-light: #ffb74d;
   --color-info: #2196f3;
   --color-info-light: #64b5f6;
+  --color-info-dark: #1858A9;
   --color-disabled: #9e9e9e;
   --color-disabled-light: #bdbdbd;
   --color-disabled-dark: #757575;
