--- a/react-front/src/components/Discussion/call/Call.scss
+++ b/react-front/src/components/Discussion/call/Call.scss
@@ -9,8 +9,8 @@
   video {
     width: 100%;
     height: 100%;
-    object-fit: contain;
-    aspect-ratio: 16/9;
+    object-fit: cover;
+    aspect-ratio: 16/10;
 
     &.hidden {
       display: none;
