Update Profil Picture & Update Register
Can now change profil picture

Can now add passwd if new user

Need help : Already relocate to "/" when new passwd is set. User is in waiting status, he must be redirect to /login

--- a/react-front/src/styles/index.scss
+++ b/react-front/src/styles/index.scss
@@ -194,6 +194,9 @@ img {
 .g1 {
   gap: 1rem;
 }
+.g2 {
+  gap: 2rem;
+}
 
 .g3 {
   gap: 3rem;
@@ -246,7 +249,9 @@ img {
 .w-100 {
   width: 100%;
 }
-
+.rem3 {
+  width: 3rem;
+}
 .ma {
   margin: auto;
 }
