--- a/react-front/src/components/Discussion/liste-discussions/ListeDiscussions.scss
+++ b/react-front/src/components/Discussion/liste-discussions/ListeDiscussions.scss
@@ -15,10 +15,11 @@
     flex-direction: column;
     gap: 1rem;
 
-    h2 {
-      color: var(--color-font);
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
+    .btn-discussion {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
     }
   }
 
